# ROC_V2

./: README.md
PixHawk_Scripts/config_file/: config_ROC.param
PixHawk_Scripts/scripts/: brake_armed_rc1_rc2_relays_3_4_safety_enable.lua
Raspberry/Examples/hil_communication_standalone/: CMakeLists.txt  README.md
Raspberry/Examples/hil_communication_standalone/examples/: main.cpp  main_back.cpp
Raspberry/Examples/hil_communication_standalone/include/hil_communication/: frame.h  hil_serial.h  hil_udp.h  serial.h  udp.h
Raspberry/Examples/hil_communication_standalone/src/: frame.cpp  hil_serial.cpp  hil_udp.cpp  serial.cpp  udp.cpp
Raspberry/RTK_infrastructure/: README.md  mavlink_router.conf  rtcm_injector.py  sniff_rtcm_serial.py  sniff_rtcm_udp_m.py
Tool_firmware/Base_communication/Communication_base/: Communication_base.ino
Tool_firmware/Tool_firmware/: HilFrameArduino.h  README.md  README_ES.md  Tool_firmware.ino
